dataset1235/2025-2/1955397009/users/4276496853/executions/1686127217_4190502342.log
== RUN (2025-08-12 13:04:01)
-- CODE: 
print(180/4/.)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
-- ERROR:
File "XXXX", line 1
    print(180/4/.)
                ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
-- ERROR:
File "XXXX", line 1
    print(180/4/.)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 13:05:13)
-- CODE: 
print(180/4)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
---- user output:
45.0
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
---- user output:
45.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 13:04:44)
-- CODE: 
print(180/4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
---- user output:
45.0
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
---- user output:
45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 13:04:31)
-- CODE: 
print(180/4 /.)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
-- ERROR:
File "XXXX", line 1
    print(180/4 /.)
                 ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
-- ERROR:
File "XXXX", line 1
    print(180/4 /.)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
